diesel_compile_tests/tests/fail/any_is_only_selectable_if_inner_expr_is_selectable.stderr
error[E0277]: the trait bound `stuff::table: diesel::query_source::AppearsInFromClause<more_stuff::table>` is not satisfied
  --> $DIR/any_is_only_selectable_if_inner_expr_is_selectable.rs:31:10
   |
31 |         .load(&conn);
   |          ^^^^ the trait `diesel::query_source::AppearsInFromClause<more_stuff::table>` is not implemented for `stuff::table`
   |
   = help: the following implementations were found:
             <stuff::table as diesel::query_source::AppearsInFromClause<stuff::table>>
   = note: required because of the requirements on the impl of `diesel::AppearsOnTable<stuff::table>` for `more_stuff::columns::names`
   = note: required because of the requirements on the impl of `diesel::AppearsOnTable<stuff::table>` for `diesel::pg::expression::array_comparison::Any<more_stuff::columns::names>`
   = note: required because of the requirements on the impl of `diesel::AppearsOnTable<stuff::table>` for `diesel::expression::operators::Eq<stuff::columns::name, diesel::pg::expression::array_comparison::Any<more_stuff::columns::names>>`
   = note: required because of the requirements on the impl of `diesel::AppearsOnTable<stuff::table>` for `diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<stuff::columns::name, diesel::pg::expression::array_comparison::Any<more_stuff::columns::names>>>`
   = note: required because of the requirements on the impl of `diesel::query_builder::where_clause::ValidWhereClause<stuff::table>` for `diesel::query_builder::where_clause::WhereClause<diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<stuff::columns::name, diesel::pg::expression::array_comparison::Any<more_stuff::columns::names>>>>`
   = note: required because of the requirements on the impl of `diesel::query_builder::Query` for `diesel::query_builder::SelectStatement<stuff::table, diesel::query_builder::select_clause::DefaultSelectClause, diesel::query_builder::distinct_clause::NoDistinctClause, diesel::query_builder::where_clause::WhereClause<diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<stuff::columns::name, diesel::pg::expression::array_comparison::Any<more_stuff::columns::names>>>>>`
   = note: required because of the requirements on the impl of `diesel::query_dsl::LoadQuery<_, _>` for `diesel::query_builder::SelectStatement<stuff::table, diesel::query_builder::select_clause::DefaultSelectClause, diesel::query_builder::distinct_clause::NoDistinctClause, diesel::query_builder::where_clause::WhereClause<diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<stuff::columns::name, diesel::pg::expression::array_comparison::Any<more_stuff::columns::names>>>>>`
